# LPR

./: .gitignore  CMakeLists.txt  LPR.xml  licensePlateRecognize.cpp  main.cpp  plate_line.hpp  predict.py  run.py  settings.hpp
